--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -10,5 +10,6 @@
 }
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-content: center;
 }
