user can now change the shelf location and last date read of their existing books

--- a/src/components/books/BookForm.css
+++ b/src/components/books/BookForm.css
@@ -4,11 +4,25 @@
 .form__control {
     width: 90%;
 }
+.form__header {
+    border-bottom: 1px solid black;
+    padding: 10px 0 20px 0;
+    width: 35%;
+}
+.title {
+    width: 35%
+}
+.author {
+    width: 20%
+}
 #pubYear {
-    width: min-content;
+    width: 11em;
 }
 #select {
-    width: min-content;
+    width: 11em;
+}
+#date {
+    width: 11em;
 }
 .submit-book {
     margin-right: 20px;
