--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,47 +1,43 @@
-.container {
+.home-container {
+    margin: 3em 1em;
     display: flex;
-    margin: 0 10px 0 2em;
-    justify-items: center;
+}
+.aside {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    margin: 3em 3em 0 0; 
 }
 .new-book-btn {
     margin-bottom: 1em;
     width: fit-content;
 }
-.aside {
-    display: flex;
-    flex-direction: column;
-    flex: 2;
-    margin: 3em 3em 0 0; 
-}
-.posts {
-    flex: 7;
-    margin-left: 4em;
-}
-.aside__book {
-    margin: 1em 0 4em 0;
+#asideImg {
+    height: 42px;
+    width: 42px;
 }
 .currentRead {
     margin-top: 1em;
 }
-.aside__shelves {
-}
-.shelf-count {
-    margin: 0 0 10px 0;
-}
-.updates-header {
-    text-align: center;
-    border-bottom: 1px solid black;
-    margin: 1em 2em;
-    padding: 10px 0;
-}
-#asideImg {
-    height: 42px;
-    width: 42px;
+.aside__book {
+    margin: 1em 0 4em 0;
 }
 .currentRead__title {
     font-weight: bold;
 }
 .shelves-header {
     border-bottom: 1px solid black;
-    margin: 20px 0;
+    margin: 25px 0;
+    padding-bottom: 15px;
+    width: 50%;
+}
+.posts {
+    flex: 7;
+    width: 100%;
+}
+.updates-header {
+    text-align: center;
+    border-bottom: 1px solid black;
+    margin: 1em 2em;
+    padding: 10px 0;
 }
