--- a/src/components/books/BookForm.css
+++ b/src/components/books/BookForm.css
@@ -10,13 +10,16 @@
     width: 35%;
 }
 .title {
-    width: 35%
+    width: 45%
 }
 .author {
     width: 20%
 }
 #pubYear {
     width: 11em;
+}
+#wikiLink {
+    width: 40%
 }
 #select {
     width: 11em;
