--- a/src/components/posts/Post.css
+++ b/src/components/posts/Post.css
@@ -1,8 +1,8 @@
-.noteCard {
+.postCard {
     width: 80%;
     margin: 1em auto;
 }
-.noteCard__title {
+.postCard__title {
     font-size: large;
 }
 .user-name {
