--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -11,19 +11,22 @@
     width: 42px;
 }
 #newBookBtn {
-    margin: 4em 0 1em 0;
+    margin: 1em 0 3em 0;
 }
 .aside__book {
     margin: 1em 0 2em 0;
 }
+.breakPoint {
+    padding: 10px 0;
+}
 .shelves-header {
-    margin-bottom: 2em;
+    margin-bottom: 30px;
     border-bottom: 1px solid black;
     padding: 0 1em 0 0;
     width: fit-content
 }
 .shelf-count {
-    margin-bottom: 2em;
+    margin-bottom: 1.5em;
 }
 .posts {
     flex: 7;
