--- a/src/components/books/BookNoteList.css
+++ b/src/components/books/BookNoteList.css
@@ -1,5 +1,5 @@
 .notes-container {
-    margin: 1em;
+    margin: 4em 1em;
 }
 .notes-container__title {
     border-bottom: 1px solid black;
@@ -12,4 +12,8 @@
     flex-direction: column;
     align-items: flex-end;
     margin: 0 1em 1em 0;
+}
+.addNote-btn {
+    margin-right: 4em;
+    margin-top: 1em;
 }
