--- a/src/components/posts/Post.css
+++ b/src/components/posts/Post.css
@@ -1,5 +1,12 @@
 .postCard {
+    background-color: #DCD9D4;
+    background-image: linear-gradient(to bottom, rgba(255,255,255,0.50) 0%, rgba(0,0,0,0.50) 100%), radial-gradient(at 50% 0%, rgba(255,255,255,0.10) 0%, rgba(0,0,0,0.50) 50%);
+    background-blend-mode: soft-light,screen;
+    box-shadow: 4px 3px 8px 1px #969696;
+  	-webkit-box-shadow: 4px 3px 8px 1px #969696;
+    border-radius: 15px;
     width: 80%;
+    height: 180px;
     margin: 1em auto;
 }
 .postCard__title {
