--- a/src/components/posts/Post.css
+++ b/src/components/posts/Post.css
@@ -8,10 +8,26 @@
     width: 80%;
     height: 180px;
     margin: 1em auto;
+    display: flex;
 }
 .postCard__title {
     font-size: large;
 }
 .user-name {
     font-weight: bold;
+}
+.likeDeleteContainer {
+    display: flex;
+    justify-content: space-between;
+}
+#deletePost {
+    margin-right: 40px;
+}
+#starIcon {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+.likeDeleteContainer span {
+    margin-left: 5px;
 }
